--- a/static/css/flex.wxss
+++ b/static/css/flex.wxss
@@ -1,3 +1,20 @@
 .flex {
   display: flex;
 }
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+}
+
+.flex-align-center {
+  align-items: center;
+}
+
+.flex-wrap {
+  flex-flow: wrap;
+}
