refactor: 重构点击输入框

--- a/modules/Food/pages/index/index.wxml
+++ b/modules/Food/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <view class='food'>
   <view class="search">
-    <input class='search-input' placeholder-class='placeholderSty' placeholder='请输入搜索内容' bindtap='bindInputClick'></input>
+    <view class='search-input' bindtap='bindInputClick'>请输入搜索内容</view>
   </view>
   <view class='list'>
     <view class='list-item' wx:for="{{list}}" wx:key="{{index}}">{{item.title}}</view>
