--- a/modules/Food/pages/index/index.wxml
+++ b/modules/Food/pages/index/index.wxml
@@ -3,6 +3,17 @@
     <view class='search-input' bindtap='bindInputClick'>请输入搜索内容</view>
   </view>
   <view class='list'>
-    <view class='list-item' wx:for="{{list}}" wx:key="{{index}}">{{item.title}}</view>
+    <view class='list-item' wx:for="{{list}}" wx:key="{{index}}" data-item='{{item}}' bindtap='detailView'>
+      <view class='img-container'>
+        <image class='img' src='{{item.image}}' mode="aspectFill"></image>
+      </view>
+      <view class='info'>
+        <view class='title'>{{item.title}}</view>
+        <view>
+          <text class='address'>{{item.address}}</text>
+          <text class='types'>{{item.types}}</text>
+        </view>
+      </view>
+    </view>
   </view>
 </view>
