--- a/modules/Food/pages/index/index.wxss
+++ b/modules/Food/pages/index/index.wxss
@@ -13,7 +13,7 @@
 .search-input {
   border-radius: 30px;
   background-color: #ffffff;
-  padding: 12rpx 25rpx;
+  padding: 13rpx 25rpx;
   font-size: 26rpx;
   color: #999999;
 }
@@ -22,4 +22,36 @@
   padding: 20rpx;
   margin-bottom: 20rpx;
   background-color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center
+}
+
+.img-container {
+  width: 150rpx;
+  height: 150rpx;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.info {
+  margin-left: 20rpx;
+}
+
+.info .title {
+  margin-bottom: 40rpx;
+}
+
+.info .address {
+  font-size: 26rpx;
+  color: #999999;
+  padding-right: 20rpx;
+}
+
+.info .types {
+  font-size: 26rpx;
+  color: #888888;
 }
