--- a/modules/Food/pages/index/index.wxml
+++ b/modules/Food/pages/index/index.wxml
@@ -1,17 +1,17 @@
 <view class='food'>
   <view class="search">
-    <view class='search-input' bindtap='bindInputClick'>请输入门店名称</view>
+    <view class='search-input' bindtap='bindInputClick'>请输入搜索内容</view>
   </view>
   <view class='list'>
     <view class='list-item' wx:for="{{list}}" wx:key="{{index}}" data-item='{{item}}' bindtap='detailView'>
       <view class='img-container'>
-        <image class='img' src='http://192.168.0.100:9999/api/customer{{item.image}}?phoneno={{item.phoneno}}' mode="aspectFill"></image>
+        <image class='img' src='{{item.image}}' mode="aspectFill"></image>
       </view>
       <view class='info'>
-        <view class='title'>{{item.name}}</view>
+        <view class='title'>{{item.title}}</view>
         <view>
           <text class='address'>{{item.address}}</text>
-          <text class='types'>{{item.type}}</text>
+          <text class='types'>{{item.types}}</text>
         </view>
       </view>
     </view>
