--- a/modules/Food/pages/detail/detail.wxss
+++ b/modules/Food/pages/detail/detail.wxss
@@ -39,6 +39,41 @@
   margin-top: 20rpx;
 }
 
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
+.recommend .title {
+  margin-bottom: 20rpx;
+  font-size: 34rpx;
+}
+
 .scroll-view {
   width: 100%;
   display: flex;
