feat: 增加门店详情推荐列表的展示

--- a/modules/Food/pages/detail/detail.wxml
+++ b/modules/Food/pages/detail/detail.wxml
@@ -1,5 +1,5 @@
 <view class="detail">
-  <image class='img' src='http://192.168.0.100:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
+  <image class='img' src='http://172.25.6.91:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
   <view class='content'>
     <view class='info'>
       <view>{{detail.name}}</view>
@@ -18,8 +18,8 @@
     <view class='recommend'>
       <view class='title'>精品推荐</view>
       <scroll-view class="scroll-view" scroll-x style="width: 100%">
-        <view class="item" wx:for="{{[1,2,3,4]}}" wx:key="{{index}}">
-          <image class='img' src='../../../../static/images/dicos.jpeg' mode="aspectFill"></image>
+        <view class="item" wx:for="{{list}}" wx:key="{{index}}">
+          <image class='img' src='http://172.25.6.91:9999/api/customer/public/images/store/recommend/{{item}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
         </view>
       </scroll-view>
     </view>
