--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,2 +1,6 @@
-<!--pages/user/user.wxml-->
-<text>pages/user/user.wxml</text>
+<view class="container">
+  <view></view>
+  <view>
+    <view>我的意见</view>
+  </view>
+</view>
