--- a/modules/Beauty/pages/index/index.wxss
+++ b/modules/Beauty/pages/index/index.wxss
@@ -1,1 +1,58 @@
-/* modules/Beauty/pages/index/index.wxss */
+/* moudleFood/pages/index/index.wxss */
+.food {
+  min-height: 100vh;
+  background-color: #f8f8f8;
+}
+
+.search {
+  font-size: 30rpx;
+  background-color: #f8f8f8;
+  padding: 20rpx;
+}
+
+.search-input {
+  border-radius: 30px;
+  background-color: #ffffff;
+  padding: 13rpx 25rpx;
+  font-size: 26rpx;
+  color: #999999;
+}
+
+.list-item {
+  padding: 20rpx;
+  margin-bottom: 20rpx;
+  background-color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center
+}
+
+.img-container {
+  width: 150rpx;
+  height: 150rpx;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.info {
+  margin-left: 20rpx;
+}
+
+.info .title {
+  margin-bottom: 40rpx;
+  font-size: 32rpx;
+}
+
+.info .address {
+  font-size: 26rpx;
+  color: #999999;
+  padding-right: 20rpx;
+}
+
+.info .types {
+  font-size: 26rpx;
+  color: #888888;
+}
