--- a/modules/Food/pages/detail/detail.wxml
+++ b/modules/Food/pages/detail/detail.wxml
@@ -1,5 +1,5 @@
 <view class="detail">
-  <image class='img' src='http://172.25.6.91:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
+  <image class='img' src='http://172.25.6.158:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
   <view class='content'>
     <view class='info'>
       <view class='store-name'>{{detail.name}}</view>
@@ -8,9 +8,8 @@
         <text>￥126/人</text>
       </view>
       <view class='score'>
-        <text class='score-item'>口味：9.2分</text>
-        <text class='score-item'>环境：9.4分</text>
-        <text class='score-item'>服务：9.3分</text>
+        <text class='score-item'>综合评分：</text>
+        <text class='score-item'>9.4分</text>
       </view>
       <view class='address'>地址：{{detail.address}}</view>
     </view>
@@ -19,7 +18,7 @@
       <view class='title'>精品推荐</view>
       <scroll-view class="scroll-view" scroll-x style="width: 100%">
         <view class="item" wx:for="{{list}}" wx:key="{{index}}">
-          <image class='img' src='http://172.25.6.91:9999/api/customer/public/images/store/recommend/{{item}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
+          <image class='img' src='http://172.25.6.158:9999/api/customer/public/images/store/recommend/{{item}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
         </view>
       </scroll-view>
     </view>
