--- a/modules/Gift/pages/index/index.wxss
+++ b/modules/Gift/pages/index/index.wxss
@@ -1,1 +1,63 @@
-/* modules/Gift/pages/index/index.wxss */
+.container {
+  min-height: 100vh;
+  background-color: #f8f8f8;
+}
+
+.scroll-view {
+  width: 100%;
+  display: flex;
+  white-space: nowrap; 
+  -webkit-overflow-scrolling: touch;
+  background-color: #fff;
+  margin-bottom: 20rpx;
+  border-top: 1px #ececec solid;
+}
+.nav-item {
+   display: inline-block;
+   padding: 6px 20rpx;
+   font-size: 32rpx;
+}
+
+.nav-item-active {
+  color: #fff;
+  background-color: red;
+}
+
+.list-item {
+  padding: 20rpx;
+  margin-bottom: 20rpx;
+  background-color: #fff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center
+}
+
+.img-container {
+  width: 150rpx;
+  height: 150rpx;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+}
+
+.info {
+  margin-left: 20rpx;
+}
+
+.info .title {
+  margin-bottom: 40rpx;
+  font-size: 32rpx;
+}
+
+.info .address {
+  font-size: 26rpx;
+  color: #999999;
+  padding-right: 20rpx;
+}
+
+.info .types {
+  font-size: 26rpx;
+  color: #888888;
+}
