--- a/modules/Health/pages/index/index.wxml
+++ b/modules/Health/pages/index/index.wxml
@@ -1,2 +1,18 @@
-<!--modules/Health/pages/index/index.wxml-->
-<text>modules/Health/pages/index/index.wxml</text>
+<view class='food'>
+  <view class="search">
+    <view class='search-input' bindtap='bindInputClick'>请输入门店名称</view>
+  </view>
+  <view class='list'>
+    <view class='list-item' wx:for="{{list}}" wx:key="{{index}}" data-item='{{item}}' bindtap='detailView'>
+      <view class='img-container'>
+        <image class='img' src='http://172.25.6.117:9999/api/customer{{item.image}}?phoneno={{item.phoneno}}' mode="aspectFill"></image>
+      </view>
+      <view class='info'>
+        <view class='title'>{{item.name}}</view>
+        <view>
+          <text class='address'>{{item.address}}</text>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
