--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,6 +1,14 @@
 <view class="container">
-  <view></view>
-  <view>
-    <view>我的意见</view>
+  <view class='head'>
+    <view class="avatar">
+      <open-data type="userAvatarUrl"></open-data>
+    </view>
+    <view class='username'>
+      <open-data type="userNickName"></open-data>
+    </view>
+  </view>
+  <view class='content'>
+    <view class='item'>积分商城</view>
+    <view class='item' bindtap='feedback'>意见反馈</view>
   </view>
 </view>
