--- a/modules/Rest/pages/detail/detail.wxml
+++ b/modules/Rest/pages/detail/detail.wxml
@@ -1,5 +1,5 @@
 <view class="detail">
-  <image class='img' src='http://172.25.6.117:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
+  <image class='img' src='http://172.25.5.83:9999/api/customer{{detail.image}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
   <view class='content'>
     <view class='info'>
       <view class='store-name'>{{detail.name}}</view>
@@ -17,8 +17,8 @@
     <view class='recommend'>
       <view class='title'>精品推荐</view>
       <scroll-view class="scroll-view" scroll-x style="width: 100%">
-        <view class="item" wx:for="{{list}}" wx:key="{{index}}" d bindtap='preview'>
-          <image class='img' src='http://172.25.6.117:9999/api/customer/public/images/store/recommend/{{item}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
+        <view class="item" wx:for="{{list}}" wx:key="{{index}}" bindtap='preview'>
+          <image class='img' src='http://172.25.5.83:9999/api/customer/public/images/store/recommend/{{item}}?phoneno={{detail.phoneno}}' mode="aspectFill"></image>
         </view>
       </scroll-view>
     </view>
